<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/notifications"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:gravity="center"
        android:text="@string/are_you_want_to_adddrug"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="2"

        >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/ok"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/cancel"
            android:layout_weight="1"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>