<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

<variable
    name="model"
    type="com.motman_doctor.models.AdddrugModel" />

        <variable
            name="lang"
            type="String" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDelete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            app:cardCornerRadius="25dp"
            android:layout_marginStart="3dp"
            app:cardBackgroundColor="@color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:src="@drawable/ic_delete"
             />
        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp"
                app:contentPadding="3dp"
                app:cardBackgroundColor="@color/color2"
                >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    android:padding="5dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="16sp"
        android:textColor="@color/gray6"
        android:text="@string/drug_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_gray"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:singleLine="true"
        error="@{model.error_name}"
        android:text="@={model.name}"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="16sp"
        android:textColor="@color/gray6"
        android:text="@string/dose"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_gray"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:singleLine="true"
        android:text="@={model.dose}"
        error="@{model.error_dose}"
        android:inputType="number"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="16sp"
        android:textColor="@color/gray6"
        android:text="@string/details"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_gray"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="start"
        android:textColor="@color/black"
        android:textSize="14sp"
        error="@{model.error_detials}"
        android:text="@={model.detials}"
        />

</LinearLayout>
            </androidx.cardview.widget.CardView>

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>