<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="lang"
            type="String" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray3"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"

        >
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">



                <LinearLayout
                    android:id="@+id/ll_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    >

                    <ImageView
                        android:id="@+id/image_back"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="8dp"
                        android:rotation='@{lang.equals("en")?180:0}'
                        android:src="@drawable/ic_right_arrow"
                        android:tint="@color/color1"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/appoinments_table"
                        android:textColor="@color/color1"
                        android:textSize="15sp" />



                </LinearLayout>





            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white"
            >
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >


                    <LinearLayout
                        android:id="@+id/ll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp"
                        android:background="@color/colorPrimary"


                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="3"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/day"
                            android:textColor="@color/white"
                            android:textSize="15sp"

                            />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="26dp"
                            android:layout_weight=".7"
                            android:gravity="center"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="@string/show"
                            android:textColor="@color/white"
                            android:textSize="15sp"

                            />


                    </LinearLayout>


                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                     android:layout_weight="1"

                        >

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/gray3"
                            >

                        </androidx.recyclerview.widget.RecyclerView>




                    </FrameLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
